flux/apps/utilities/forgejo-endpoint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-forgejo
    namespace: forgejo
subsets:
    - addresses:
          - ip: 192.168.2.40
      ports:
          - name: http
            port: 3000
            protocol: TCP
