flux/apps/utilities/forgejo-endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-forgejo
    namespace: forgejo
spec:
    ports:
        - name: http
          port: 3000
          protocol: TCP
          targetPort: 3000
