flux/apps/utilities/forgejo-endpoint/ssh.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-forgejo-ssh
    namespace: forgejo
subsets:
    - addresses:
          - ip: 192.168.2.40
      ports:
          - name: ssh
            port: 222
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: external-forgejo-ssh
    namespace: forgejo
    annotations:
        external-dns.alpha.kubernetes.io/hostname: git.axiom.lucasfehes.nl
spec:
    type: LoadBalancer
    ports:
        - name: ssh
          port: 22
          protocol: TCP
          targetPort: 222
