flux/apps/utilities/forgejo-endpoint/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: external-forgejo
    namespace: forgejo
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "forgejo.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: external-forgejo
                port: 3000
